--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,12 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-
     <!-- IMPORT FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
 
-    <title>React App</title>
+    <title>FilmsHub</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
